--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,6 +80,7 @@
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "web-streams-polyfill": "^4.1.0"
   }
 }
