--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,7 @@
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
     "remark-supersub": "^1.0.0",
-    "undici": "^7.4.0"
+    "undici": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -72,6 +72,7 @@
     "globals": "^16.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.4.3",
     "prettier": "^3.5.1",
     "react-test-renderer": "^18.2.0",
@@ -82,3 +83,4 @@
     "vite": "^6.1.0"
   }
 }
+ 
