Added flag based AI foundry SDK

--- a/src/.env.sample
+++ b/src/.env.sample
@@ -27,6 +27,7 @@ AZURE_OPENAI_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_NAME=
 AZURE_OPENAI_EMBEDDING_ENDPOINT=
 AZURE_OPENAI_EMBEDDING_KEY=
+AZURE_OPENAI_PROJECT_CONN_STRING=
 # User Interface
 UI_TITLE=
 UI_LOGO=
@@ -121,3 +122,4 @@ PROMPTFLOW_RESPONSE_TIMEOUT=120
 PROMPTFLOW_REQUEST_FIELD_NAME=query
 PROMPTFLOW_RESPONSE_FIELD_NAME=reply
 PROMPTFLOW_CITATIONS_FIELD_NAME=documents
+USE_AI_FOUNDRY_SDK=False
