--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -5,6 +5,8 @@ azure-search-documents==11.6.0b9
 azure-storage-blob==12.24.1
 python-dotenv==1.0.1
 azure-cosmos==4.9.0
+azure-ai-projects==1.0.0b9
+azure-ai-inference==1.0.0b9
 quart==0.20.0
 uvicorn==0.34.0
 aiohttp==3.11.13
